# lg-zoom-codenames

./: .eslintignore  .eslintrc.json  .gitignore  LICENSE  README.md  index.html  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
client/: .eslintrc.json  package.json  tsconfig.json  webpack.config.js
client/src/html/: game.html  index.html  spymaster.html
client/src/scss/: _body.scss  _button.scss  _container.scss  _dialog.scss  _header.scss  _input.scss  _noscript.scss  _notification.scss  _variables.scss  game.scss  index.scss  spymaster.scss
client/src/ts/: action.ts  game.tsx  spymaster.tsx
css/: index.css
js/: index.js  runtime.js  vendors.js
server/: Cargo.toml
server/src/: lib.rs  message.rs  words.json
server/src/action/: mod.rs
server/src/game/: add_spymaster.rs  card.rs  mod.rs  remove_spymaster.rs  starting_team.rs
server/src/message/: mod.rs
server/src/payload/: mod.rs
server/src/server/: game_start.rs  game_stop.rs  join_game.rs  mod.rs  spymaster_start.rs  spymaster_stop.rs
server/src/spymaster/: click_card.rs  mod.rs  remove_game.rs  send_word_list.rs
src/html/: index.html
src/scss/: _board.scss  _button.scss  _card.scss  _dialog.scss  _notification.scss  _title-bar.scss  _variables.scss  _window.scss  index.scss
src/ts/: index.tsx  main.ts  store.ts
src/ts/components/: App.tsx  Board.tsx  Card.tsx  Dialog.tsx  DialogSection.tsx  FullscreenButton.tsx  Notification.tsx  NotificationItem.tsx  TitleBar.tsx
test_app/: Cargo.toml
test_app/src/: main.rs
(+61 files in other folders)
