[package]
name = "screen-share-codenames-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.10.0"
actix-web = "3.3.3"
actix-web-actors = "3.0.0"
actix-files = "0.5.0"
futures = "0.3.19"
log = "0.4.14"
rand = "0.8.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
spectral = "0.6.0"
