[package]
name = "screen-share-codenames-server"
version = "0.2.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4.1.0"
actix-web-actors = "4.1.0"
actix-files = "0.6.1"
futures = "0.3.19"
log = "0.4.14"
rand = "0.8.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
uuid = { version = "1.1.2", features = ["serde", "v4"] }

[dev-dependencies]
spectral = "0.6.0"
